Wed May 19 02:21:53 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: do not use class variables.

Tue May 18 21:21:43 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/csv.rb: writes lines with "\n" when row separator is not given.
	  formerly it was "\r\n".

	* lib/csv.rb: [CAUTION] API change

	  * CSV::Row removed.  a row is represented as just an Array.  since
	    CSV::Row was a subclass of Array, it won't hurt almost all programs
	    except one which depended CSV::Row#match.

	  * CSV::Cell removed.  a cell is represented as just a String or
	    nil(NULL).  this change will cause widespread destruction.

      	      CSV.open("foo.csv", "r") do |row|
		row.each do |cell|
		  if cell.is_null       # Cell#is_null
		    p "(NULL)"
		  else
		    p cell.data         # Cell#data
		  end
		end
	      end

	    must be just;

	      CSV.open("foo.csv", "r") do |row|
		row.each do |cell|
		  if cell.nil?
		    p "(NULL)"
		  else
		    p cell
		  end
		end
	      end

	* lib/csv.rb: [CAUTION] record separator(CR, LF, CR+LF) behavior
	  change.  CSV.open, CSV.parse, and CSV,generate now do not force
	  opened file binmode.  formerly it set binmode explicitly.

	  with CSV.open, binmode of opened file depends the given mode
	  parameter "r", "w", "rb", and "wb".  CSV.parse and CSV.generate open
	  file with "r" and "w".

       	  setting mode properly is user's responsibility now.

	* lib/csv.rb: accepts String as a fs (field separator/column separator)
	  and rs (record separator/row separator)

	* lib/csv.rb: added CSV.foreach(path, rs = nil, &block).  CSV.foreach
	  now does not handle "| cmd" as a path different from IO.foreach.
	  needed?

	* test/csv/test_csv.rb: updated.

Tue May 18 14:24:20 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml.rb: added rdoc to beginning of lib.

Tue May 18 14:00:46 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.h (NEW_DSTR): adjust list length.

	* parse.y (literal_concat): ditto.
