@@ -1,3 +1,7 @@
+Wed May 19 02:29:36 2004  Minero Aoki  <aamine@loveruby.net>
+
+	* lib/net/http.rb: support TRACE.
+
 Wed May 19 02:21:53 2004  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/net/http.rb: do not use class variables.
